# default-science-project

./: .gitignore  README.md  pre-commit  pyproject.toml
scripts/: train_generation.py
src/DEFAULT_PKG/: constants.py  logging.py  utils.py
src/ds_default/: logging.py  utils.py
