[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DEFAULT_PKG"
version = "0.0.0"
authors = [
  { name="Ishan Gaur", email="DEFAULT_EMAIL" },
]
description = "DEFAULT"
readme = "README.md"
requires-python = ">=3.DEFAULT_VERSION"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ishan-gaur/DEFAULT_REPO_NAME"
